--- a/projeto/cd_projeto_aplicado_IV_entrega_3.ipynb
+++ b/projeto/cd_projeto_aplicado_IV_entrega_3.ipynb
@@ -98,7 +98,19 @@
       "source": [
         "# **Referencial Teórico**\n",
         "\n",
-        "(1 página) Defir resumidamente os principais conceitos envolvidos na sua solução. Discutir os trabalhos correlacionados. Apresentar alternativas de solução que foram empregadas no mesmo problema ou problemas semelhantes, e suas vantagens e limitações. Indicar referências ao longo do texto (padrão ABNT).\n",
+        "A taxa de desocupação mede a proporção de pessoas economicamente ativas que buscam trabalho, mas não encontram ocupação, sendo um dos principais indicadores de desempenho macroeconômico e social (IBGE, 2024). Esse indicador reage diretamente às oscilações do ciclo econômico, às crises e às políticas públicas de estímulo ao emprego (BARROS; CORSEUIL, 2021). Estudos sobre o mercado de trabalho brasileiro mostram que períodos de recessão e eventos inesperados, como a pandemia de COVID-19, provocam elevações expressivas nas taxas de desemprego, seguidas de recuperações graduais, o que reflete a rigidez estrutural e a inércia desse mercado (FIRPO; GONZAGA; MONTEIRO, 2022). Assim, compreender a dinâmica temporal da desocupação requer o uso de modelos estatísticos capazes de capturar tendências, sazonalidades e padrões cíclicos, permitindo tanto a análise descritiva quanto a previsão de cenários futuros (CARVALHO; MOREIRA, 2020).\n",
+        "\n",
+        "A análise de séries temporais é uma abordagem consolidada na estatística e na econometria, cujo objetivo é identificar dependências temporais e padrões de comportamento nos dados observados ao longo do tempo (BOX; JENKINS; REINSEL; LJUNG, 2016). Entre os modelos tradicionais, destacam-se os modelos autorregressivos integrados de médias móveis (ARIMA), que assumem que o valor atual de uma variável depende linearmente de seus valores passados e de termos de erro (CHATFIELD, 2003). Esses modelos são eficientes em séries estacionárias e bem comportadas, mas apresentam limitações quando há mudanças estruturais abruptas, como as observadas em períodos de crise econômica (CARVALHO; MOREIRA, 2020). Nesses casos, a decomposição aditiva da série — separando-a em tendência, sazonalidade e resíduo — oferece uma leitura mais interpretável dos componentes subjacentes ao fenômeno (HARVEY, 1990; HYNDMAN; ATHANASOPOULOS, 2018).\n",
+        "\n",
+        "A técnica STL (Seasonal-Trend decomposition using Loess), proposta e popularizada por Cleveland et al. (1990) e recomendada por Hyndman e Athanasopoulos (2018), utiliza regressão local para decompor séries temporais de forma robusta e flexível, permitindo que os componentes sazonais mudem de forma ao longo do tempo. No contexto da taxa de desocupação brasileira, a aplicação do STL permite identificar uma tendência de longo prazo associada às fases de crescimento e recessão da economia, bem como uma sazonalidade leve e estável, relacionada a flutuações típicas do mercado de trabalho entre trimestres — como a queda no desemprego no final do ano e o aumento no início do ciclo anual. A análise da componente residual, por sua vez, evidencia choques transitórios como o aumento abrupto da desocupação em 2020, durante a pandemia, e a posterior normalização gradual (SILVA; PORSSE, 2021).\n",
+        "\n",
+        "Complementarmente, o uso dos gráficos de autocorrelação (ACF) e autocorrelação parcial (PACF) permite investigar a presença de dependência temporal e identificar a estrutura autorregressiva da série. A ACF mede a correlação entre o valor atual e seus atrasos (lags), enquanto a PACF identifica as correlações diretas com cada defasagem, removendo a influência intermediária (BOX et al., 2016). Em séries econômicas, é comum observar altos valores de autocorrelação nos primeiros lags, o que indica persistência temporal e dependência de curto prazo. Esse padrão foi identificado também na série da taxa de desocupação do Brasil, sugerindo um comportamento compatível com um modelo autorregressivo de primeira ordem (AR(1)), em que o valor atual é fortemente influenciado pelo trimestre anterior (CARVALHO; MOREIRA, 2020; HYNDMAN; ATHANASOPOULOS, 2018). Quando há tendência, a diferenciação da série torna o processo estacionário, conduzindo ao modelo ARIMA(1,1,0), adequado para representar séries que exibem inércia e ajuste lento, como o desemprego (HARVEY, 1990; CHATFIELD, 2003).\n",
+        "\n",
+        "Essa persistência temporal revela uma memória longa do mercado de trabalho: aumentos ou reduções na taxa de desocupação tendem a se propagar ao longo de vários trimestres, refletindo tanto o ritmo lento de criação de empregos quanto o tempo necessário para que políticas de estímulo produzam efeito (BARROS; CORSEUIL, 2021). A leve sazonalidade observada, por outro lado, reforça a ideia de que o componente cíclico tem impacto marginal frente à tendência estrutural, predominando fatores macroeconômicos de longo prazo (FIRPO; GONZAGA; MONTEIRO, 2022). O diagnóstico ACF/PACF corrobora essa interpretação, mostrando que a taxa de desocupação apresenta alta autocorrelação positiva de curto prazo e ausência de picos sazonais marcantes, o que reforça o caráter gradual e persistente das variações no emprego.\n",
+        "\n",
+        "Pesquisas recentes destacam que a combinação de métodos clássicos de séries temporais e técnicas modernas de aprendizado de máquina melhora a capacidade preditiva e interpretativa das análises econômicas (SANTOS; PORSSE, 2022). No caso da decomposição STL, sua capacidade de isolar componentes e revelar comportamentos não lineares torna-a uma ferramenta poderosa para comunicação de resultados a gestores públicos e formulação de políticas de emprego. Em âmbito global, organismos internacionais como a Organização Internacional do Trabalho (ILO, 2023) e a Organização das Nações Unidas (NAÇÕES UNIDAS, 2023) reforçam a importância de acompanhar continuamente o desemprego, dentro da agenda do ODS 8 – Trabalho decente e crescimento econômico, como forma de orientar políticas sustentáveis de geração de emprego e renda.\n",
+        "\n",
+        "Em síntese, o uso combinado das abordagens STL e ACF/PACF oferece uma compreensão mais profunda da dinâmica da taxa de desocupação, permitindo identificar simultaneamente a estrutura de longo prazo, as variações sazonais e a força de dependência temporal do fenômeno. Essa abordagem se mostra adequada para contextos macroeconômicos complexos como o brasileiro, pois alia robustez estatística, clareza interpretativa e relevância empírica, contribuindo para análises que podem apoiar decisões estratégicas em políticas públicas e planejamento econômico.\n",
         "\n"
       ],
       "metadata": {
@@ -205,7 +217,7 @@
         },
         "outputId": "0d825e9c-50b9-4a3b-c044-776bd53b3c92"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1022,7 +1034,7 @@
         "id": "fDkRrRcs9NXA",
         "outputId": "7b1b6595-2d73-418f-de20-a413ff45a258"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1143,7 +1155,7 @@
       "metadata": {
         "id": "PCoxC-D7Elbp"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1208,7 +1220,7 @@
         "id": "WORBzx7BE4UI",
         "outputId": "90122978-dc7e-487f-ddd9-35db55f025ea"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1626,7 +1638,7 @@
         "id": "T8i9RlWmN_sM",
         "outputId": "28e04165-679a-4b00-db89-39f5a76c212c"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2088,7 +2100,7 @@
         "id": "O859sIasccMO",
         "outputId": "589563f2-4c40-4f18-c191-36fb9397c792"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2123,7 +2135,7 @@
         "id": "g-OcsHzNdHtI",
         "outputId": "f7f8ccdb-0139-49ca-9ecb-85b639007e0e"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2456,7 +2468,7 @@
         "id": "-ZgKCIovdR9A",
         "outputId": "68b4ea46-5308-4936-df67-3e8eb4f1632c"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2900,7 +2912,7 @@
         "id": "BorX8Cf6eRtD",
         "outputId": "93c5a58e-88e9-4bff-f552-4d4ec75faf1b"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2942,7 +2954,7 @@
         "id": "zvcWr9WzemBc",
         "outputId": "8c0bfd01-78af-4e44-b4e7-94212eae43af"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3279,7 +3291,7 @@
         "id": "VUVTlL6sfGzH",
         "outputId": "67d34f43-910e-41ae-f420-0ccc2c892558"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3319,7 +3331,7 @@
         "id": "i_zHy_aSfVc5",
         "outputId": "c9024c83-d2cd-4d9c-a141-3247af931cc0"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3765,7 +3777,7 @@
         "id": "6zpKWcQOg3m5",
         "outputId": "2e8c6db7-58d4-47b6-f3e5-b791b02c2b81"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3932,7 +3944,7 @@
         "id": "mpi6eQQzkSn3",
         "outputId": "33e3045a-6a63-4c30-b130-1560c475ef42"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4334,7 +4346,7 @@
         "id": "o7uO7RCupVpu",
         "outputId": "2f74a9f5-4c58-4463-91f7-6b008565e077"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4706,7 +4718,13 @@
         "\n",
         "BARROS, R.; CORSEUIL, C. Desemprego e dinâmica do mercado de trabalho no Brasil. Revista Brasileira de Economia, v. 75, n. 3, p. 321-345, 2021.\n",
         "\n",
+        "BOX, G. E. P.; JENKINS, G. M.; REINSEL, G. C.; LJUNG, G. M. Time Series Analysis: Forecasting and Control. 5. ed. Hoboken: John Wiley & Sons, 2016.\n",
+        "\n",
         "CARVALHO, M.; MOREIRA, P. Previsão da taxa de desocupação brasileira com modelos ARIMA. Economia Aplicada, v. 24, n. 2, p. 245-266, 2020.\n",
+        "\n",
+        "CHATFIELD, C. The Analysis of Time Series: An Introduction. 6. ed. Boca Raton: Chapman & Hall/CRC, 2003.\n",
+        "\n",
+        "CLEVELAND, R. B.; CLEVELAND, W. S.; MCRAE, J. E.; TERPENNING, I. STL: A Seasonal-Trend Decomposition Procedure Based on Loess. Journal of Official Statistics, v. 6, n. 1, p. 3–73, 1990.\n",
         "\n",
         "FIRPO, S.; GONZAGA, G.; MONTEIRO, J. Crises econômicas e mercado de trabalho no Brasil. Estudos Econômicos, v. 52, n. 1, p. 5-30, 2022.\n",
         "\n",
