--- a/projeto/cd_projeto_aplicado_IV_entrega_4.ipynb
+++ b/projeto/cd_projeto_aplicado_IV_entrega_4.ipynb
@@ -4784,7 +4784,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Executando os modelos para a UF com maior média e para a UF com menor média da taxa de desocupação"
+        "## Executando os modelos para as UFs com maiores e menores médias."
       ],
       "metadata": {
         "id": "kSkd_uc-Rtez"
@@ -5179,12 +5179,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "wZVPDUH42ADT",
-        "outputId": "7354bbfe-1bcc-4ece-98e5-4d76126846f4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "wZVPDUH42ADT",
+        "outputId": "7354bbfe-1bcc-4ece-98e5-4d76126846f4"
       },
       "execution_count": 86,
       "outputs": [
@@ -5226,6 +5226,49 @@
       ],
       "metadata": {
         "id": "igYUYSX8MY45"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "Os resultados obtidos mostram que a trajetória da taxa de desocupação no Brasil entre 2012 e 2025 está fortemente alinhada aos grandes ciclos macroeconômicos do período: pré-crise, crise de 2015–2016, choque da pandemia de COVID-19 e fase de recuperação recente. A decomposição STL evidenciou uma tendência de alta até o auge da pandemia, seguida de queda consistente a partir de 2022, o que é coerente com a redução histórica da taxa de desocupação observada em 2024–2025. A sazonalidade se mostrou leve e estável, indicando que o comportamento do desemprego é dominado por fatores estruturais, e não apenas por flutuações de curto prazo. Em termos de ODS 8, esse resultado sugere que o país vem avançando em direção ao objetivo de “trabalho decente e crescimento econômico”, mas ainda de forma desigual e vulnerável a choques externos.\n",
+        "\n",
+        "A comparação entre Bahia (maior média de desocupação) e Santa Catarina (menor média) reforça o caráter estrutural das assimetrias regionais do mercado de trabalho brasileiro. Enquanto a Bahia apresenta um nível médio em torno de 14,5%, com picos superiores a 20% e sazonalidade mais intensa, Santa Catarina mantém taxas em torno de 4,7%, com flutuações mais moderadas e rápida recuperação após choques. As decomposições STL de ambos os estados mostram um ciclo qualitativo semelhante (alta na crise e na pandemia, queda na recuperação), porém em patamares muito distintos. Os gráficos de ACF e PACF indicam forte persistência temporal e estrutura autorregressiva de primeira ordem (AR(1)) em ambos os casos, o que significa que choques negativos tendem a se propagar ao longo de vários trimestres. Na prática, isso implica que estados com níveis iniciais mais altos, como a Bahia, tendem a levar mais tempo para retornar a patamares mais baixos de desemprego, ampliando desigualdades regionais e tensionando o cumprimento do ODS 8 em todo o território nacional.\n",
+        "\n",
+        "Do ponto de vista de política pública, as evidências sugerem que **não basta uma estratégia macro uniforme**. Em estados com baixa desocupação e maior resiliência, como Santa Catarina, o foco pode estar na qualificação profissional contínua, na transição para empregos de maior produtividade e na formalização de vínculos, reforçando a dimensão “trabalho decente” do ODS 8. Já em estados com desemprego estrutural elevado, como a Bahia, é necessário combinar políticas de estímulo à atividade econômica (infraestrutura, incentivos setoriais, atração de investimentos) com políticas ativas de emprego (programas de intermediação de mão de obra, subsídios temporários à contratação, qualificação focada em setores dinâmicos locais). A sazonalidade mais intensa na Bahia sugere espaço para políticas específicas em períodos críticos do ano, como programas temporários, frentes de trabalho ou reforço de benefícios de proteção social nos trimestres em que a taxa sobe.\n",
+        "\n",
+        "A persistência temporal identificada pelos gráficos de ACF/PACF também tem implicações importantes. Como a taxa de desocupação apresenta forte memória, políticas de curto prazo tendem a ter efeitos limitados se não forem mantidas ou complementadas por ações estruturais de médio e longo prazo. Isso vale tanto para as respostas à crise (como durante a pandemia) quanto para a consolidação da recuperação. A presença de um comportamento compatível com modelos AR(1) indica que, uma vez iniciado um ciclo de redução do desemprego, é fundamental evitar interrupções abruptas em políticas de geração de emprego, sob risco de “reverter” avanços e prolongar períodos de desocupação elevada, especialmente em regiões mais vulneráveis.\n",
+        "\n",
+        "### Conclusão e recomendações para o poder público\n",
+        "\n",
+        "Os resultados deste estudo, obtidos por meio de EDA, decomposição STL e análise ACF/PACF, mostram que a taxa de desocupação no Brasil avançou em direção às metas do ODS 8, principalmente a partir de 2022, mas ainda apresenta **marcantes desigualdades regionais e forte inércia temporal**. As séries da Bahia e de Santa Catarina ilustram dois extremos de um mesmo sistema: enquanto uma parte do país vive o desafio do desemprego estrutural, outra opera próxima de pleno emprego, ainda que sujeita a choques conjunturais. Isso exige políticas públicas territorializadas, baseadas em evidências e monitoradas continuamente.\n",
+        "\n",
+        "Com base nos diferentes períodos analisados, algumas recomendações são:\n",
+        "\n",
+        "- **Período pré-crise (2012–2014)**  \n",
+        "  Utilizar ferramentas de decomposição e acompanhamento de séries (como STL e médias móveis) para construir **painéis de monitoramento antecipado**. Mesmo em fases de relativa estabilidade, é possível detectar mudanças sutis na tendência que indiquem deterioração futura do mercado de trabalho, permitindo que medidas anticíclicas sejam desenhadas antes da materialização de uma crise.\n",
+        "\n",
+        "- **Crise de 2015–2016**  \n",
+        "  Empregar modelos de séries temporais (ARIMA/AR(1) sobre série diferenciada) para simular cenários alternativos de desemprego sob diferentes pacotes de políticas (investimento público, redução de tributos setoriais, programas de emprego). Essas simulações podem apoiar decisões sobre **intensidade e duração** das políticas de estímulo, ajudando a encurtar o período de alta desocupação.\n",
+        "\n",
+        "- **Pandemia de COVID-19 (2020–2021)**  \n",
+        "  Em contextos de choque abrupto, o uso de séries ajustadas sazonalmente e de indicadores em tempo quase real permite avaliar com mais clareza o impacto de medidas emergenciais (auxílios, manutenção de renda, programas de preservação de empregos). A análise residual e de quebras estruturais pode ajudar o poder público a distinguir o que é efeito transitório da crise e o que se torna uma nova tendência, orientando a transição de políticas emergenciais para políticas estruturais.\n",
+        "\n",
+        "- **Período de recuperação (2022–2025)**  \n",
+        "  Ferramentas como STL, ACF/PACF e dashboards com séries regionais permitem acompanhar se a recuperação está sendo **inclusiva** ou concentrada em poucos estados. Nos casos em que a tendência de queda do desemprego é lenta (como na Bahia), os indicadores servem de alerta para a necessidade de reforçar políticas de emprego e desenvolvimento produtivo local, evitando que a recuperação nacional oculte bolsões persistentes de vulnerabilidade.\n",
+        "\n",
+        "Quanto ao uso da ferramenta analítica, o notebook desenvolvido neste projeto pode ser facilmente adaptado para um ambiente institucional (por exemplo, uma secretaria de trabalho ou um observatório de políticas públicas). Ele já organiza a coleta automatizada de dados (SIDRA/IBGE), padroniza séries, gera gráficos de tendência, sazonalidade, comparação regional e diagnósticos ACF/PACF. Em formato de painel interativo ou rotinas periódicas de análise, esse tipo de solução permite ao poder público:\n",
+        "\n",
+        "- **Monitorar continuamente** a taxa de desocupação por UF, região e faixas de tempo;\n",
+        "- **Detectar rapidamente mudanças** na tendência ou na volatilidade do desemprego;\n",
+        "- **Comparar estados extremos** (como Bahia e Santa Catarina) para calibrar políticas específicas;\n",
+        "- **Avaliar o impacto de políticas** ao observar como a tendência e a componente residual evoluem após intervenções.\n",
+        "\n",
+        "Em suma, a combinação de dados oficiais (PNAD Contínua) com técnicas de séries temporais fornece uma base sólida para decisões alinhadas ao ODS 8. Ela permite que gestores públicos saiam de uma visão puramente descritiva e passem a trabalhar com **evidências dinâmicas**, capazes de orientar a formulação, o monitoramento e a correção de políticas de emprego em tempo hábil, com foco na redução das desigualdades regionais e na promoção de trabalho decente para toda a população brasileira.\n"
+      ],
+      "metadata": {
+        "id": "BhAxUH7e7YAS"
       }
     },
     {
