--- a/projeto/cd_projeto_aplicado_IV_entrega_4.ipynb
+++ b/projeto/cd_projeto_aplicado_IV_entrega_4.ipynb
@@ -229,7 +229,7 @@
         },
         "outputId": "5cb457ef-dc9e-4cfb-9a18-9d5a13141b3b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1046,7 +1046,7 @@
         "id": "fDkRrRcs9NXA",
         "outputId": "05085444-9d79-438f-ff94-34683be85b9d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1167,7 +1167,7 @@
       "metadata": {
         "id": "PCoxC-D7Elbp"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1232,7 +1232,7 @@
         "id": "WORBzx7BE4UI",
         "outputId": "de62ab3b-6a9e-4a81-f28f-711e6d8796b1"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1650,7 +1650,7 @@
         "id": "T8i9RlWmN_sM",
         "outputId": "85060b10-7fab-4257-b7cb-623cc8e3f083"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2121,7 +2121,7 @@
         "id": "O859sIasccMO",
         "outputId": "b791bc45-1b55-4a95-b73e-0fd279e82c61"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2156,7 +2156,7 @@
         "id": "g-OcsHzNdHtI",
         "outputId": "f83711a1-e48f-4796-8907-07812d343945"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2489,7 +2489,7 @@
         "id": "-ZgKCIovdR9A",
         "outputId": "4161714a-2f10-4726-ef26-e35413ae1ac9"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2886,7 +2886,7 @@
         "id": "kPCCkHQDdtiE",
         "outputId": "57a0973f-db8d-4f4e-dbbc-41c2d0c2fc0e"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2946,7 +2946,7 @@
         "id": "BorX8Cf6eRtD",
         "outputId": "fe8855d8-3cb3-4e7e-ff2b-0b2720410ebc"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2997,7 +2997,7 @@
         "id": "zvcWr9WzemBc",
         "outputId": "63650bc3-1fb9-4e39-c4ec-b339b5430c99"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3334,7 +3334,7 @@
         "id": "VUVTlL6sfGzH",
         "outputId": "11fecd32-a5b6-45d5-f518-0f7b6f0265a6"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3383,7 +3383,7 @@
         "id": "i_zHy_aSfVc5",
         "outputId": "b00c9f6b-14c9-4a37-bcf3-61248531ac2e"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3453,7 +3453,7 @@
         "id": "7DVOCDhKf-yv",
         "outputId": "24d21792-8f97-4ab9-bee6-3bb8fb362386"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3839,7 +3839,7 @@
         "id": "6zpKWcQOg3m5",
         "outputId": "d0eb3009-0b1b-4488-a780-9ebc1229cc60"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4005,7 +4005,7 @@
         "id": "mpi6eQQzkSn3",
         "outputId": "402d6568-6664-407d-bea4-64f720def33a"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4461,7 +4461,7 @@
         "id": "o7uO7RCupVpu",
         "outputId": "dd6cbcb5-1532-4777-b665-944f9d5f23b3"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4506,7 +4506,7 @@
         "id": "Y4Fgp1Oup_-_",
         "outputId": "f7616f65-3a5f-40cf-c9d4-bb192d953397"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4612,7 +4612,7 @@
         "id": "vOw1rlZ8tpzj",
         "outputId": "024b4a61-f5e2-4b65-f798-3e42ddf06e1e"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4759,7 +4759,7 @@
         "id": "tmOXymgwRB1K",
         "outputId": "9c01892b-a1e3-48da-b063-fd3e971b33a0"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4924,7 +4924,7 @@
         "id": "95S9GspNRzBY",
         "outputId": "42d974e6-02e3-4229-af4a-ec97359345fd"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5033,7 +5033,7 @@
         "id": "ZEvgYZEAqxKr",
         "outputId": "164d8934-a276-4f9e-f083-5920de370c3e"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5104,7 +5104,7 @@
         "id": "byGDxry5ujTn",
         "outputId": "2d898699-b506-472a-f252-5211931576c0"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5186,7 +5186,7 @@
         "id": "wZVPDUH42ADT",
         "outputId": "7354bbfe-1bcc-4ece-98e5-4d76126846f4"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5302,6 +5302,17 @@
       ],
       "metadata": {
         "id": "6Rdkm2p_ewe4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Apresentação\n",
+        "\n",
+        "link para video"
+      ],
+      "metadata": {
+        "id": "Pg_GMxAxksir"
       }
     },
     {
